<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <af.shizuku.manager.settings.CollapsiblePreferenceCategory
        android:key="category_adb_connection"
        android:title="@string/settings_root_category_adb_connection"
        android:defaultValue="true">

        <af.shizuku.manager.settings.GrayableIconSwitchPreference
            android:key="adb_proxy_enabled"
            android:title="@string/settings_adb_proxy"
            android:summary="@string/settings_adb_proxy_summary"
            android:icon="@drawable/ic_wadb_24"
            android:defaultValue="false" />

        <af.shizuku.manager.settings.GrayableIconSwitchPreference
            android:key="on_device_adb_tcp"
            android:title="@string/settings_on_device_adb_tcp"
            android:summary="@string/settings_on_device_adb_tcp_summary"
            android:icon="@drawable/ic_adb_24"
            android:defaultValue="false" />

        <af.shizuku.manager.settings.GrayableIconSwitchPreference
            android:key="force_start_wadb"
            android:title="@string/settings_force_start_wadb"
            android:summary="@string/settings_force_start_wadb_summary"
            android:icon="@drawable/ic_server_restart"
            android:defaultValue="false" />

    </af.shizuku.manager.settings.CollapsiblePreferenceCategory>

    <af.shizuku.manager.settings.CollapsiblePreferenceCategory
        android:key="category_stock_shizuku_compat"
        android:title="@string/settings_root_category_stock_compat"
        android:defaultValue="true">

        <af.shizuku.manager.settings.GrayableIconSwitchPreference
            android:key="companion_fallback"
            android:title="@string/settings_companion_fallback"
            android:summary="@string/settings_companion_fallback_summary"
            android:icon="@drawable/ic_medical_services_24"
            android:defaultValue="true" />

        <Preference
            android:key="launch_stock_shizuku"
            android:title="@string/home_companion_open"
            android:summary="@string/home_companion_description"
            android:icon="@drawable/ic_baseline_link_24" />

    </af.shizuku.manager.settings.CollapsiblePreferenceCategory>

    <af.shizuku.manager.settings.CollapsiblePreferenceCategory
        android:key="category_su_bridge"
        android:title="@string/settings_root_category_su_bridge"
        android:defaultValue="true">

        <af.shizuku.manager.settings.GrayableIconSwitchPreference
            android:key="su_bridge_enabled"
            android:title="@string/settings_fake_su"
            android:summary="@string/settings_fake_su_summary"
            android:icon="@drawable/ic_root_24"
            android:defaultValue="false" />

        <EditTextPreference
            android:key="custom_su_path"
            android:title="@string/settings_custom_su_path"
            android:summary="@string/settings_custom_su_path_summary"
            android:dependency="su_bridge_enabled"
            android:icon="@drawable/ic_terminal_24"
            app:iconSpaceReserved="true"
            app:useSimpleSummaryProvider="true"
            android:singleLine="true" />

    </af.shizuku.manager.settings.CollapsiblePreferenceCategory>

    <af.shizuku.manager.settings.CollapsiblePreferenceCategory
        android:key="category_root_modules"
        android:title="@string/settings_root_category_rootless_bridges"
        android:defaultValue="true">

        <Preference
            android:key="root_compatibility_hub"
            android:title="@string/settings_root_integration_hub"
            android:summary="@string/settings_root_integration_hub_summary"
            android:icon="@drawable/ic_admin_panel_settings_24" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="root_build_prop_redirect_enabled"
            android:title="@string/settings_root_build_prop_redirect"
            android:summary="@string/settings_root_build_prop_redirect_summary"
            android:icon="@drawable/ic_settings_suggest_24"
            android:defaultValue="false"
            app:infoTitle="@string/help_root_build_prop_title"
            app:infoDetail="@string/help_root_build_prop_detail" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="root_auto_grant_enabled"
            android:title="@string/settings_root_auto_grant"
            android:summary="@string/settings_root_auto_grant_summary"
            android:icon="@drawable/ic_admin_panel_settings_24"
            android:defaultValue="false"
            app:infoTitle="@string/help_root_auto_grant_title"
            app:infoDetail="@string/help_root_auto_grant_detail" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="root_file_interceptor_enabled"
            android:title="@string/settings_root_file_interceptor"
            android:summary="@string/settings_root_file_interceptor_summary"
            android:icon="@drawable/ic_folder_24"
            android:defaultValue="false"
            app:infoTitle="@string/help_root_file_interceptor_title"
            app:infoDetail="@string/help_root_file_interceptor_detail" />

    </af.shizuku.manager.settings.CollapsiblePreferenceCategory>

    <af.shizuku.manager.settings.CollapsiblePreferenceCategory
        android:key="category_ghost_bridge"
        android:title="@string/settings_root_category_mocking"
        android:defaultValue="false">

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="stealth_mode"
            android:title="@string/settings_stealth_mode"
            android:summary="@string/settings_stealth_mode_summary"
            android:icon="@drawable/ic_visibility_off_24"
            android:defaultValue="false"
            app:infoTitle="@string/help_stealth_mode_title"
            app:infoDetail="@string/help_stealth_mode_detail" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="root_iptables_mocking_enabled"
            android:title="@string/settings_root_iptables_mocking"
            android:summary="@string/settings_root_iptables_mocking_summary"
            android:icon="@drawable/ic_shield_24"
            android:defaultValue="false"
            app:infoTitle="@string/help_root_iptables_title"
            app:infoDetail="@string/help_root_iptables_detail" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="root_magisk_mocking_enabled"
            android:title="@string/settings_root_magisk_mocking"
            android:summary="@string/settings_root_magisk_mocking_summary"
            android:icon="@drawable/ic_settings_suggest_24"
            android:defaultValue="false"
            app:infoTitle="@string/help_root_magisk_title"
            app:infoDetail="@string/help_root_magisk_detail" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="root_busybox_mocking_enabled"
            android:title="@string/settings_root_busybox_mocking"
            android:summary="@string/settings_root_busybox_mocking_summary"
            android:icon="@drawable/ic_terminal_24"
            android:defaultValue="false"
            app:infoTitle="@string/help_root_busybox_title"
            app:infoDetail="@string/help_root_busybox_detail" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="overlay_fs_proxy_enabled"
            android:title="@string/settings_overlay_fs_proxy"
            android:summary="@string/settings_overlay_fs_proxy_summary"
            android:icon="@drawable/ic_folder_24"
            android:defaultValue="false" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="root_kernel_ghosting_enabled"
            android:title="@string/settings_root_kernel_ghosting"
            android:summary="@string/settings_root_kernel_ghosting_summary"
            android:icon="@drawable/ic_settings_suggest_24"
            android:defaultValue="false" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="root_partition_ghosting_enabled"
            android:title="@string/settings_root_partition_ghosting"
            android:summary="@string/settings_root_partition_ghosting_summary"
            android:icon="@drawable/ic_admin_panel_settings_24"
            android:defaultValue="false" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="root_power_ghosting_enabled"
            android:title="@string/settings_root_power_ghosting"
            android:summary="@string/settings_root_power_ghosting_summary"
            android:icon="@drawable/ic_server_restart"
            android:defaultValue="false" />

    </af.shizuku.manager.settings.CollapsiblePreferenceCategory>

    <af.shizuku.manager.settings.CollapsiblePreferenceCategory
        android:key="category_unlocked_bootloader"
        android:title="@string/settings_root_category_bootloader"
        android:defaultValue="false">

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="bootloader_flash_ota_enabled"
            android:title="@string/settings_bootloader_flash_ota"
            android:summary="@string/settings_bootloader_flash_ota_summary"
            android:icon="@drawable/ic_update_24"
            android:defaultValue="false" />

        <af.shizuku.manager.settings.PlusFeaturePreference
            android:key="bootloader_fastbootd_reboot_enabled"
            android:title="@string/settings_bootloader_fastbootd"
            android:summary="@string/settings_bootloader_fastbootd_summary"
            android:icon="@drawable/ic_server_restart"
            android:defaultValue="false" />

    </af.shizuku.manager.settings.CollapsiblePreferenceCategory>

</PreferenceScreen>
